--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "tree-climber",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "test": "vitest run"
+    "test": "vitest run",
+    "dev": "nodemon --watch src --ext ts --exec vite-node src/server.ts"
   },
   "dependencies": {
+    "fastify": "^5.6.0",
+    "fastify-type-provider-zod": "^6.0.0",
     "tree-sitter": "^0.21.1",
-    "tree-sitter-typescript": "^0.23.2"
+    "tree-sitter-typescript": "^0.23.2",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
+    "vite-node": "^3.2.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
