Migrate to pnpm

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tree-climber",
   "version": "0.0.1",
   "type": "module",
+  "packageManager": "pnpm@10.16.1",
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
