server: Add error handling and logging

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "fastify": "^5.6.0",
     "fastify-type-provider-zod": "^6.0.0",
+    "pino-pretty": "^13.1.2",
     "tree-sitter": "^0.21.1",
     "tree-sitter-typescript": "^0.23.2",
     "zod": "^4.1.5"
